feat: implemented pop category changes and a few scripted modifiers to round up missing ones from vanilla

--- a/localisation/english/replace/zz_evolved_civics_l_english.yml
+++ b/localisation/english/replace/zz_evolved_civics_l_english.yml
@@ -742,7 +742,7 @@
 		civic_dimensional_worship: "§L£tec_civic_feature£§!Dimensional Worship"
 		civic_dimensional_worship_desc: "['concept_tec_feature_civic']\n\nThis society believes that a divine existence lies beyond the folds in space and time. Systems where instabilities are highest hold a sacred meaning to them as sites of both pilgrimage and research."
 		civic_dimensional_worship_effects: "$tec_loc_c_unlocks_feature$ §H£physics£ Dimensional Shrines§!\n- Allows to build a §Y$sm_dimensional_shrine$§! starbase building in systems containing a §Y$WORMHOLE$§!, an §Y$pc_rift_star$§!, an §Y$ASTRAL_RIFT$§!, an §Y$LGATE_GALACTIC$§! or a §Y$SHROUD_TUNNEL_GALACTIC$§!.\nEach §Y$sm_dimensional_shrine$§! provides §G+$@dimensional_shrine_unity_production$§! £unity£."
-		civic_dimensional_worship_effects_additional: "$tec_loc_c_modifiers$\n- Chance for [ 'concept_astral_rift', $ASTRAL_RIFTS$ ] to appear in systems you control: §G+100%§!$NEW_LINE$§M- Rare technologies§! now appear at §Y1.1§! times the normal rate. This effect would change a §Y1%§! chance into a §Y1.1%§! chance."
+		civic_dimensional_worship_effects_additional: "- Chance for [ 'concept_astral_rift', $ASTRAL_RIFTS$ ] to appear in systems you control: §G+100%§!"
 
 		civic_corporate_dimensional_worship: "§L£tec_civic_feature£§!Dimensional Enterprise"
 		civic_corporate_dimensional_worship_desc: "$civic_dimensional_worship_desc$"
