--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -115,7 +115,7 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 	tec_cw_mat_bonus_desc:0 ", §Y$tec_loc_edict_funds$§!"
 	tec_cw_spi_bonus_desc:0 ", §Y$mod_planet_pops_upkeep_mult$ Reduction§!"
 	tec_cw_mil_bonus_desc:0 ", §Y$tec_loc_naval_cap$§!"
-	tec_cw_pac_bonus_desc:0 ", §Y$mod_pop_lifestyle_trade_mult$§!"
+	tec_cw_pac_bonus_desc:0 ", §Y$mod_pop_lifestyle_trade_value_mult$§!"
 	tec_cw_egal_bonus_desc:0 ", §Y$MOD_POP_CITIZEN_HAPPINESS$§!"
 	tec_cw_auth_bonus_desc:0 ", §Y$tec_loc_stability$§!"
 	tec_cw_phobe_bonus_desc:0 "§Y$mod_planet_jobs_tec_main_species_produces_mult$§!"
@@ -220,7 +220,7 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 
  # Zombie
 	TRAIT_ZOMBIE_EFFECT: "Cannot generate §YLeaders§!\nCannot be employed in §Y$pop_cat_ruler$§! or §Y$pop_cat_specialist$§! Jobs"
-
+	trait_robot_ferro_viscosity_augmentation_tt: "$MOD_POP_AMENITIES_USAGE_MULT$: §G-50%§!"
 # STARBASE BUILDINGS Replace
 # ------------------------------------------------------------
 # Omeganerf
@@ -312,3 +312,16 @@ concept_hegemony_federation_desc: "$hegemony_federation_desc$\n\n§ERequirements
 concept_military_federation_desc: "$military_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_militarist$\n- Has §I$civic_hive_strength_of_legions$§! Civic\n- Has §I$civic_machine_warbots$§! Civic\n- Has §I$civic_tec_machine_warform_cluster$§! Civic"
 concept_research_federation_desc: "$research_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_materialist$\n- Has §I$auth_machine_intelligence$§! Authority\n- Has §I$auth_tec_hive_cybernetic$§! Authority\n- Has §I$auth_tec_ai$§! Authority\n- Has §I$auth_tec_ai_corporate$§! Authority\n- Has §I$civic_hive_natural_neural_network$§! Civic"
 concept_trade_federation_desc: "$trade_federation_desc$\n\n§ERequirements:§!\nOne of the following:\n- $civic_tooltip_competitive$\n- Has §I$auth_corporate$§! Authority\n- Has §I$auth_tec_patrocorporate$§! Authority\n- Has §I$auth_tec_ai_corporate$§! Authority\n- Has §I$civic_tec_machine_traders$§! Civic"
+
+# modifiers
+
+mod_pop_cyborg_happiness: "§BCyborg§! Happiness"
+mod_pop_non_cyborg_happiness: "Non-§BCyborg§! Happiness"
+mod_pop_cyborg_worker_happiness: "§BCyborg§! $pop_cat_worker$ Happiness"
+mod_pop_cyborg_specialist_happiness: "§BCyborg§! $pop_cat_specialist$ Happiness"
+mod_pop_cyborg_ruler_happiness: "§BCyborg§! $pop_cat_ruler$ Happiness"
+mod_pop_cyborg_slave_happiness: "§BCyborg§! $pop_cat_slave$ Happiness"
+mod_pop_cyborg_criminal_happiness: "§BCyborg§! $pop_cat_criminal$ Happiness"
+triggered_mod_pop_cyborg_happiness: "[TecGetCyborgNonCyborg] Happiness"
+triggered_mod_pop_cyborg_happiness_cyborg: "§BCyborg§!"
+triggered_mod_pop_cyborg_happiness_non_cyborg: "Non-§BCyborg§!"
