--- a/localisation/english/zz_evolved_leaders_l_english.yml
+++ b/localisation/english/zz_evolved_leaders_l_english.yml
@@ -7,6 +7,7 @@
 	mod_tec_leader_commander_starting_skill_add: "$commander_with_icon$ $tec_starting_level$"
 	mod_tec_leader_official_starting_skill_add: "$official_with_icon$ $tec_starting_level$"
 	mod_tec_leader_scientist_starting_skill_add: "$scientist_with_icon$ $tec_starting_level$"
+	mod_tec_leader_cyborg_initial_skill: "§BCyborg§! $MOD_LEADER_INITIAL_SKILL$"
 
 	tec_starting_traits: "Starting Traits"
 	mod_tec_leader_starting_traits_add: "Leader $tec_starting_traits$"
