feat: job inlines for new dlc jobs, used our inlines in machine age buildings

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -144,7 +144,9 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 
 	job_bio_trophy_effect_desc:0 "£job_bio_trophy£ $job_bio_trophy_plural$ produce §Y$tec_loc_unity$§! and $mod_planet_jobs_complex_drone_produces_mult$"
 
-# STARBASE replaces
+	job_augmentor_effect_desc: "[TecGetAugmentorEffect]"
+
+	# STARBASE replaces
 # ------------------------------------------------------------
 	tec_sbd_production:0 "Resource Production"
 	tec_sbd_research:0 "Tech-Station"
