fix: all around issue fixing, optimizations and small compat changes, overtuned changes

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -145,6 +145,11 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 	job_bio_trophy_effect_desc:0 "£job_bio_trophy£ $job_bio_trophy_plural$ produce §Y$tec_loc_unity$§! and $mod_planet_jobs_complex_drone_produces_mult$"
 
 	job_augmentor_effect_desc: "[TecGetAugmentorEffect]"
+	job_cyberdome_duelist_effect_desc: "['concept_tec_specialist_job_cyberdome_duelist_plural_icon'] provide §Y$tec_loc_amenities$§!, §Y$tec_loc_happiness$§!, and §Y$tec_loc_unity$§!"
+	job_cyberdome_spectator_effect_desc: "['concept_tec_worker_job_cyberdome_spectator_plural_icon'] provide §Y$tec_loc_energy$§! and §Y$tec_loc_trade_value$§!"
+
+	job_augmentor_drone_effect_desc: "[TecGetAugmentorDroneEffect]"
+
 
 	# STARBASE replaces
 # ------------------------------------------------------------
@@ -327,3 +332,7 @@ mod_pop_cyborg_criminal_happiness: "§BCyborg§! $pop_cat_criminal$ Happiness"
 triggered_mod_pop_cyborg_happiness: "[TecGetCyborgNonCyborg] Happiness"
 triggered_mod_pop_cyborg_happiness_cyborg: "§BCyborg§!"
 triggered_mod_pop_cyborg_happiness_non_cyborg: "Non-§BCyborg§!"
+
+# edicts
+
+edict_damn_the_consequences_effects:0 "All positive effects from §HOvertuned§! Traits are doubled, but so is the trait upkeep increase."
