--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -1023,6 +1023,13 @@
 	concept_tec_specialist_job_tec_pherodrone_drone_plural_icon: "£job_tec_pherodrone_drone£ $job_tec_pherodrone_drone_plural$"
 	concept_tec_specialist_job_tec_pherodrone_drone_desc: "§L$job_tec_pherodrone_drone_desc$§!\n\n$job_tec_pherodrone_drone_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_complex_drone$§!\n$tec_loc_c_produces$:\n\n"
 
+	concept_tec_specialist_job_cyberdome_duelist: "$job_cyberdome_duelist$"
+	concept_tec_specialist_job_cyberdome_duelist_alias: "$job_cyberdome_duelist$"
+	concept_tec_specialist_job_cyberdome_duelist_icon: "£job_cyberdome_duelist£ $job_cyberdome_duelist$"
+	concept_tec_specialist_job_cyberdome_duelist_plural: "$job_cyberdome_duelist_plural$"
+	concept_tec_specialist_job_cyberdome_duelist_plural_icon: "£job_cyberdome_duelist£ $job_cyberdome_duelist_plural$"
+	concept_tec_specialist_job_cyberdome_duelist_desc: "§L$job_cyberdome_duelist_desc$§!\n\n$job_cyberdome_duelist_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_specialist$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_cyberdome_duelist_alias']\n\n$tec_loc_happiness$: §G+2%§!\n$tec_loc_amenities$: §G+10§!\n$tec_loc_c_produces$: §Y£unity£ 2§!\n$tec_loc_c_upkeep$: §Y£alloys£ 1§!"
+
 	# /
  # Worker
 	concept_tec_worker_job_tec_scavenger: "$job_tec_scavenger$"
@@ -1229,6 +1236,12 @@
 	concept_tec_worker_job_tec_mental_servant_plural: "$job_tec_mental_servant_plural$"
 	concept_tec_worker_job_tec_mental_servant_plural_icon: "£job_tec_mental_servant£ $job_tec_mental_servant_plural$"
 	concept_tec_worker_job_tec_mental_servant_desc: "§L$job_tec_mental_servant_desc$§!\n\n$job_tec_mental_servant_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_simple_drone$§!\n$tec_loc_c_produces$:\n\n"
+
+	concept_tec_worker_job_cyberdome_spectator: "$job_cyberdome_spectator$"
+	concept_tec_worker_job_cyberdome_spectator_icon: "£job_cyberdome_spectator£ $job_cyberdome_spectator$"
+	concept_tec_worker_job_cyberdome_spectator_plural: "$job_cyberdome_spectator_plural$"
+	concept_tec_worker_job_cyberdome_spectator_plural_icon: "£job_cyberdome_spectator£ $job_cyberdome_spectator_plural$"
+	concept_tec_worker_job_cyberdome_spectator_desc: "§L$job_cyberdome_spectator_desc$§!\n\n$job_cyberdome_spectator_effect_desc$\n\n$tec_loc_c_stratum$: §Y$pop_cat_worker$§!\n$tec_loc_c_eco_cat$: ['concept_tec_eco_planet_cyberdome_spectator_alias']\n\n$tec_loc_trade_value$: §G+2§!\n$tec_loc_c_produces$: §Y£energy£ 2§!"
 
 	# /
  # Unsorted
