fix: more colony type fixes

--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -860,15 +860,15 @@ edict_immortal_ruler_desc:0 "Invoking this edict will claim our current Ruler as
  fanatic_xenophile_evangelist_desc: "$foreign_influence$"
 
 
- green_evangelist:0 "Ecological Trust"
- green_evangelist_desc: "$foreign_influence$"
- fanatic_green_evangelist:0 "Ecological Protest"
- fanatic_green_evangelist_desc: "$foreign_influence$"
+ ecologist_evangelist:0 "Ecological Trust"
+ ecologist_evangelist_desc: "$foreign_influence$"
+ fanatic_ecologist_evangelist:0 "Ecological Protest"
+ fanatic_ecologist_evangelist_desc: "$foreign_influence$"
  
- industrial_evangelist:0 "Industrialist Propaganda"
- industrial_evangelist_desc: "$foreign_influence$"
- fanatic_industrial_evangelist:0 "Industrial Revolution"
- fanatic_industrial_evangelist_desc: "$foreign_influence$"
+ industrialist_evangelist:0 "Industrialist Propaganda"
+ industrialist_evangelist_desc: "$foreign_influence$"
+ fanatic_industrialist_evangelist:0 "Industrial Revolution"
+ fanatic_industrialist_evangelist_desc: "$foreign_influence$"
 
 
  cooperative_evangelist:0 "Socialistic Tendencies"
