fix: eco category fixes and added autogen, and job automod fixes

--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -2299,14 +2299,14 @@
 	concept_tec_eco_planet_managers_icon: "£job_manager£ $planet_managers$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_managers_alias: "$planet_managers$"
 	concept_tec_eco_planet_managers_alias_icon: "£job_manager£ $planet_managers$"
-	concept_tec_eco_planet_managers_desc: "This category covers the main §Y$tec_loc_unity$§! jobs of Megacorps such as ['concept_tec_specialist_job_manager_plural_icon'].\n\n§Y£trigger_tec_warning£ Add modifiers from ['concept_tec_eco_planet_administrators_alias'] do not apply to this category, such as those from $civic_byzantine_bureaucracy$.§!\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
+	concept_tec_eco_planet_managers_desc: "This category covers the main §Y$tec_loc_unity$§! jobs of Megacorps such as ['concept_tec_specialist_job_manager_plural_icon'].\n\nInherits All Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
 
 
 	concept_tec_eco_planet_priests: "$planet_priests$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_priests_icon: "£job_priest£ $planet_priests$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_priests_alias: "$planet_priests$"
 	concept_tec_eco_planet_priests_alias_icon: "£job_priest£ $planet_priests$"
-	concept_tec_eco_planet_priests_desc: "This category covers the main §Y$tec_loc_unity$§! jobs of §YSpiritualist§! empires, jobs such as ['concept_tec_specialist_job_priest_plural_icon'] and ['concept_tec_specialist_job_death_priest_plural_icon'].\n\n§Y£trigger_tec_warning£ Add modifiers from ['concept_tec_eco_planet_administrators_alias'] do not apply to this category, such as those from $civic_byzantine_bureaucracy$.§!\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
+	concept_tec_eco_planet_priests_desc: "This category covers the main §Y$tec_loc_unity$§! jobs of §YSpiritualist§! empires, jobs such as ['concept_tec_specialist_job_priest_plural_icon'] and ['concept_tec_specialist_job_death_priest_plural_icon'].\n\nInherits All Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
 
 	concept_tec_eco_planet_tec_occultists: "$planet_tec_occultists$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_occultists_icon: "£job_tec_minor_occultist£ $planet_tec_occultists$ $tec_loc_eco_category$"
@@ -2367,7 +2367,7 @@
 	concept_tec_eco_planet_evaluators_icon: "£job_evaluator£ $planet_evaluators$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_evaluators_alias: "$planet_evaluators$"
 	concept_tec_eco_planet_evaluators_alias_icon: "£job_evaluator£ $planet_evaluators$"
-	concept_tec_eco_planet_evaluators_desc: "This category covers the jobs that give effects depending on ethics usually for §YGestalt§! empires, provided by the monument building, such jobs being ['concept_tec_specialist_job_evaluator_plural_icon'] and ['concept_tec_specialist_job_chronicle_drone_plural_icon'].\n\nInherits Percentage Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
+	concept_tec_eco_planet_evaluators_desc: "This category covers the jobs that give effects depending on ethics usually for §YGestalt§! empires, provided by the monument building, such jobs being ['concept_tec_specialist_job_evaluator_plural_icon'] and ['concept_tec_specialist_job_chronicle_drone_plural_icon'].\n\nInherits All Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
 
 	concept_tec_eco_planet_farmers: "$planet_farmers$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_farmers_icon: "£job_farmer£ $planet_farmers$ $tec_loc_eco_category$"
@@ -2403,13 +2403,13 @@
 	concept_tec_eco_planet_telepaths_icon: "£job_telepath£ $planet_telepaths$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_telepaths_alias: "$planet_telepaths$"
 	concept_tec_eco_planet_telepaths_alias_icon: "£job_telepath£ $planet_telepaths$"
-	concept_tec_eco_planet_telepaths_desc: "Inherits Percentage Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
+	concept_tec_eco_planet_telepaths_desc: "Inherits All Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon']"
 
 	concept_tec_eco_planet_tec_transcendents: "$planet_tec_transcendents$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_transcendents_icon: "£job_tec_transcendent£ $planet_tec_transcendents$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_transcendents_alias: "$planet_tec_transcendents$"
 	concept_tec_eco_planet_tec_transcendents_alias_icon: "£job_tec_transcendent£ $planet_tec_transcendents$"
-	concept_tec_eco_planet_tec_transcendents_desc: "Inherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']\nInherits All Modifiers from: ['concept_tec_eco_planet_priests_alias_icon'], ['concept_tec_eco_planet_telepaths_alias_icon']"
+	concept_tec_eco_planet_tec_transcendents_desc: "Inherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']\nInherits All Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon'], ['concept_tec_eco_planet_priests_alias_icon'], ['concept_tec_eco_planet_telepaths_alias_icon']"
 
 	concept_tec_eco_planet_tec_peasants: "$planet_tec_peasants$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_peasants_icon: "£job_tec_peasant£ $planet_tec_peasants$ $tec_loc_eco_category$"
@@ -2421,7 +2421,7 @@
 	concept_tec_eco_planet_tec_druids_icon: "£job_tec_druid£ $planet_tec_druids$ $tec_loc_eco_category$"
 	concept_tec_eco_planet_tec_druids_alias: "$planet_tec_druids$"
 	concept_tec_eco_planet_tec_druids_alias_icon: "£job_tec_druid£ $planet_tec_druids$"
-	concept_tec_eco_planet_tec_druids_desc: "Inherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']\nInherits All Modifiers from: ['concept_tec_eco_planet_priests_alias_icon']"
+	concept_tec_eco_planet_tec_druids_desc: "Inherits Percentage Modifiers from: ['concept_tec_eco_planet_jobs_productive_alias_icon']\nInherits All Modifiers from: ['concept_tec_eco_planet_administrators_alias_icon'], ['concept_tec_eco_planet_priests_alias_icon']"
 # /
 
 # Traits
