feat: start effect fixes and adjustment, some building normalization

--- a/localisation/english/replace/zz_evolved_replace_l_english.yml
+++ b/localisation/english/replace/zz_evolved_replace_l_english.yml
@@ -150,6 +150,9 @@ mod_job_preacher_trade_value_add: "£trade_value£ Trade Value from £job_preach
 
 	job_augmentor_drone_effect_desc: "[TecGetAugmentorDroneEffect]"
 
+	job_identity_designer_converter_effect_desc: "$job_identity_designer_plural_with_icon$ provide $i_engineering$ and $i_amenities$"
+	job_identity_designer_assembly_effect_desc: "$job_identity_designer_plural_with_icon$ provide $i_engineering$, $i_amenities$, and empire-wide $m_pop_assembly$"
+	job_identity_designer_effect_desc: "[TecGetIdentityDesignerEffect]"
 
 	# STARBASE replaces
 # ------------------------------------------------------------
