feat: more starting events fixes, robot effect creation and new portrait choices, individual machines assembly fix

--- a/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
+++ b/localisation/english/replace/zz_evolved_buildings_and_jobs_l_english.yml
@@ -1788,9 +1788,16 @@ l_english:
 	building_mecha_monastery_3:0 "Exalted Mecha-Monastery"
 	building_mecha_monastery_3_desc:0 "Here, the devotes assemble and compose the holy machines, fueling the faith of the [This.Owner.GetSpeciesNamePlural] and the capacities of the empire."
 
+	building_mecha_machine_monastery_1:0 "$building_mecha_monastery_1$"
+	building_mecha_machine_monastery_1_desc:0 "$building_mecha_monastery_1_desc$"
+	building_mecha_machine_monastery_2:0 "$building_mecha_monastery_2$"
+	building_mecha_machine_monastery_2_desc:0 "$building_mecha_monastery_2_desc$"
+	building_mecha_machine_monastery_3:0 "$building_mecha_monastery_3$"
+	building_mecha_machine_monastery_3_desc:0 "$building_mecha_monastery_3_desc$"
+
 	job_tec_mecha_priest:0 "Mechapriest"
 	job_tec_mecha_priest_plural:0 "Mechapriests"
-	job_tec_mecha_priest_desc:0 "Literated individuals whose job and faith is to be communion with the Holy Machine."
+	job_tec_mecha_priest_desc:0 "Literate individuals whose job and faith is to be communion with the Holy Machine."
 	job_tec_mecha_priest_effect_desc:0 "£job_tec_mecha_priest£ $job_tec_mecha_priest_plural$ produce §Y$tec_loc_unity$§!, §Y$tec_loc_engineering$§! and §Y$tec_loc_amenities$§!."
 	mod_job_tec_mecha_priest_add:0 "$job_tec_mecha_priest$ Jobs"
 	mod_job_tec_mecha_priest_per_pop:0 "§G+1§! $job_tec_mecha_priest$ Job per $VALUE$ Pops"
