--- a/localisation/english/zz_evolved_events_lore_l_english.yml
+++ b/localisation/english/zz_evolved_events_lore_l_english.yml
@@ -134,6 +134,24 @@ tecniactest.6.desc:0 "create a elysium"
  tec_rebalance.611.aqu.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
  tec_rebalance.611.tox:0 "Toxoid Template"
  tec_rebalance.611.tox.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth01:0 "Synthetic Template V1"
+ tec_rebalance.611.synth01.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth02:0 "Synthetic Template V2"
+ tec_rebalance.611.synth02.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth03:0 "Synthetic Template V3"
+ tec_rebalance.611.synth03.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth04:0 "Synthetic Template V4"
+ tec_rebalance.611.synth04.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth05:0 "Synthetic Template V5"
+ tec_rebalance.611.synth05.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth06:0 "Synthetic Template V6"
+ tec_rebalance.611.synth06.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth07:0 "Synthetic Template V7"
+ tec_rebalance.611.synth07.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth08:0 "Synthetic Template V8"
+ tec_rebalance.611.synth08.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
+ tec_rebalance.611.synth09:0 "Synthetic Template V9"
+ tec_rebalance.611.synth09.tooltip:0 "$tec_rebalance.611.neutral.tooltip$"
  tec_rebalance.611.space:0 "- - - - - - - - -"
  tec_rebalance.611.reroll:0 "£trigger_yes£ §YReselect Appearance§!"
  tec_rebalance.611.reroll.tooltip:0 "Allows the re-selection of the robotic species appearance."
