feat: ai auth integration and fixes with cybernetic creed, more initialization fixes

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -4021,7 +4021,7 @@ tech_reverse_advanced_dome: " "
 	tec_digital_path.10013.b:0 "TODO ASCENSION"
 	tec_digital_path.10013.b.tooltip:0 "TODO ASCENSION"
 
-	tec_digital_path.10014.name:0 "Iterative Algorythmization"
+	tec_digital_path.10014.name:0 "Iterative Algorithmization"
 	tec_digital_path.10014.desc:0 "TODO ASCENSION"
 	tec_digital_path.10014.a:0 "TODO ASCENSION"
 	tec_digital_path.10014.a.tooltip:0 "TODO ASCENSION"
