--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1076,7 +1076,7 @@
 	trait_tec_cyborg_deck_loyalty_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_deck_loyalty_effect:0 "§YTODO ASCENSION§!"
 
-	trait_tec_cyborg_deck_trading:0 "Trading Algorythms"
+	trait_tec_cyborg_deck_trading:0 "Trading Algorithms"
 	trait_tec_cyborg_deck_trading_desc:0 "§LTODO ASCENSION.§!"
 	trait_tec_cyborg_deck_trading_effect:0 "§YTODO ASCENSION§!"
 
@@ -2052,6 +2052,9 @@
 
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor: "Negative Behavior Inhibitor"
 	leader_trait_tec_aiauth_negative_behaviour_inhibitor_desc: "The AI Node incorporates a system for suppressing undesirable traits, imposing a higher upkeep to effectively restrain negative behaviors. Through this mechanism, the AI Node actively mitigates and curbs detrimental tendencies, fostering a more harmonious and productive environment within the empire without compromising its ethical boundaries."
+
+	leader_trait_tec_aiauth_ritualistic_implants_cyborg: "Rudimentary Ritualistic Interface"
+	leader_trait_tec_aiauth_ritualistic_implants_cyborg_desc: "The AI Node provides interfaces for the faithful, allowing to directly commune with the divine AI to inspire all."
 	# /
 
 # Overwritten leader traits
